[workspace]

members = [
    "chain-util",
    "chain-abci",
    "chain-core",
    "chain-storage",
    "chain-tx-filter",
    "chain-tx-validation",
    "client-cli",
    "client-common",
    "client-core",
    "client-network",
    "client-rpc",
    "client-rpc/server",
    "test-common",
    "dev-utils",
    "enclave-protocol",
    "chain-tx-enclave-next/enclave-utils",
    "chain-tx-enclave-next/enclave-ra/ra-client",
    "chain-tx-enclave-next/enclave-ra/ra-common",
    "chain-tx-enclave-next/enclave-ra/ra-enclave",
    "chain-tx-enclave-next/enclave-ra/ra-sp-client",
    "chain-tx-enclave-next/enclave-ra/ra-sp-server",
    "chain-tx-enclave-next/tdbe/tdbe-common",
    "chain-tx-enclave-next/tdbe/app-runner",
    "chain-tx-enclave-next/tdbe/enclave-app",
    "chain-tx-enclave/tx-validation/enclave",
    "chain-tx-enclave-next/tx-query-next/app-runner",
    "chain-tx-enclave-next/tx-query-next/enclave-app",
    "chain-tx-enclave-next/tx-validation-next",
    "chain-tx-enclave/mock-utils",
    "chain-tx-enclave-next/mls",
    "cro-clib",
]

default-members = [
    "chain-util",
    "chain-abci",
    "chain-core",
    "chain-storage",
    "chain-tx-filter",
    "chain-tx-validation",
    "client-cli",
    "client-common",
    "client-core",
    "client-network",
    "client-rpc",
    "client-rpc/server",
    "test-common",
    "dev-utils",
    "enclave-protocol",
    "chain-tx-enclave-next/enclave-ra/ra-sp-server",
    "chain-tx-enclave-next/enclave-utils",
    "chain-tx-enclave-next/mls",
    "cro-clib",
]

[patch.crates-io]
ring = { git = "https://github.com/crypto-com/ring.git", rev = "bdbcc7041095f028d49d9fecd7edcf26d6083274" }
# FIXME: use upstream when merged
sha2 = { git = "https://github.com/crypto-com/hashes.git", rev = "289d5b76f2163a3808010341ed1df3cb156d97e1" }
