[workspace]

members = [
    "chain-util",
    "chain-abci",
    "chain-core",
    "chain-storage",
    "chain-tx-filter",
    "chain-tx-validation",
    "client-cli",
    "client-common",
    "client-core",
    "client-network",
    "client-rpc",
    "client-rpc/server",
    "test-common",
    "dev-utils",
    "enclave-protocol",
    "chain-tx-enclave-next/enclave-utils",
    "chain-tx-enclave-next/enclave-ra/ra-client",
    "chain-tx-enclave-next/enclave-ra/ra-common",
    "chain-tx-enclave-next/enclave-ra/ra-enclave",
    "chain-tx-enclave-next/enclave-ra/ra-sp-client",
    "chain-tx-enclave-next/enclave-ra/ra-sp-server",
    "chain-tx-enclave-next/tdbe/tdbe-common",
    "chain-tx-enclave-next/tdbe/app-runner",
    "chain-tx-enclave-next/tdbe/enclave-app",
    "chain-tx-enclave-next/tx-query-next/app-runner",
    "chain-tx-enclave-next/tx-query-next/enclave-app",
    "chain-tx-enclave-next/tx-validation-next",
    "chain-tx-enclave/mock-utils",
    "chain-tx-enclave-next/mls",
    "cro-clib",
    "integration-tests/rust_tests/test_cert_expiration",
]

default-members = [
    "chain-util",
    "chain-abci",
    "chain-core",
    "chain-storage",
    "chain-tx-filter",
    "chain-tx-validation",
    "client-cli",
    "client-common",
    "client-core",
    "client-network",
    "client-rpc",
    "client-rpc/server",
    "test-common",
    "dev-utils",
    "enclave-protocol",
    "chain-tx-enclave-next/enclave-ra/ra-sp-server",
    "chain-tx-enclave-next/enclave-utils",
    "chain-tx-enclave-next/mls",
    "cro-clib",
]

[patch.crates-io]
ring = { git = "https://github.com/crypto-com/ring.git", rev = "8f2b68d2ac53b1df61ca5cdc1190f86d74e302a3" }
# FIXME: use upstream when merged
sha2 = { git = "https://github.com/crypto-com/hashes.git", rev = "289d5b76f2163a3808010341ed1df3cb156d97e1" }
# FIXME: before official spec has a solution
hpke = { git = "https://github.com/crypto-com/rust-hpke.git", rev = "25686eb87d2862535b1d5107d74e2ac8bd992bae" }