[workspace]

members = [
    "chain-util",
    "chain-abci",
    "chain-core",
    "chain-storage",
    "chain-tx-filter",
    "chain-tx-validation",
    "client-cli",
    "client-common",
    "client-core",
    "client-network",
    "client-rpc",
    "client-rpc/server",
    "test-common",
    "dev-utils",
    "enclave-protocol",
    "chain-tx-enclave-next/enclave-utils",
    "chain-tx-enclave-next/enclave-ra/ra-client",
    "chain-tx-enclave-next/enclave-ra/ra-common",
    "chain-tx-enclave-next/enclave-ra/ra-enclave",
    "chain-tx-enclave-next/enclave-ra/ra-sp-client",
    "chain-tx-enclave-next/enclave-ra/ra-sp-server",
    "chain-tx-enclave-next/tdbe/tdbe-common",
    "chain-tx-enclave-next/tdbe/enclave-app",
    "chain-tx-enclave-next/tx-query-next/enclave-app",
    "chain-tx-enclave-next/tx-validation-next",
    "chain-tx-enclave/mock-utils",
    "chain-tx-enclave-next/mls",
    "cro-clib",
    "integration-tests/rust_tests/test_cert_expiration",
]

default-members = [
    "chain-util",
    "chain-abci",
    "chain-core",
    "chain-storage",
    "chain-tx-filter",
    "chain-tx-validation",
    "client-cli",
    "client-common",
    "client-core",
    "client-network",
    "client-rpc",
    "client-rpc/server",
    "test-common",
    "dev-utils",
    "enclave-protocol",
    "chain-tx-enclave-next/enclave-ra/ra-sp-server",
    "chain-tx-enclave-next/enclave-utils",
    "chain-tx-enclave-next/mls",
    "cro-clib",
]

[patch.crates-io]
ring = { git = "https://github.com/crypto-com/ring.git", rev = "493eb07f3a7118870867093bf934f1e37a1aa602" }
# FIXME: use upstream when merged
sha2 = { git = "https://github.com/crypto-com/hashes.git", rev = "289d5b76f2163a3808010341ed1df3cb156d97e1" }
# FIXME: before official spec has a solution
hpke = { git = "https://github.com/crypto-com/rust-hpke.git", rev = "858d6433525529a6189382a8bd2f46d51959bdfa" }
