[package]
name = "chain-abci"
version = "0.5.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Pre-alpha version prototype of Crypto.com Chain node (Tendermint ABCI application)"
readme = "README.md"
edition = "2018"

[features]
default = []
sgx-test = []
mock-enclave = []

[dependencies]
abci = "0.7"
chain-core = { path = "../chain-core" }
chain-storage = { path = "../chain-storage" }
chain-tx-filter = { path = "../chain-tx-filter" }
chain-tx-validation = { path = "../chain-tx-validation" }
enclave-protocol = { path = "../enclave-protocol" }
mock-utils = { path = "../chain-tx-enclave/mock-utils" }
log = "0.4.8"
env_logger = "0.7.1"
bit-vec = { version = "0.6.1", features = ["serde_no_std"] }
byteorder = "1.3.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
hex = "0.4"
protobuf = "2.7.0"
integer-encoding = "1.1.5"
structopt = "0.3"
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "f8759809f6e3fed793b37166f7cd91c57cdb2eab", features = ["recovery", "endomorphism"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
enclave-u-common = { path = "../chain-tx-enclave/enclave-u-common" }
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
zmq = "0.9"

[build-dependencies]
cc = "1.0"
vergen = "3.1.0"

[dev-dependencies]
quickcheck = "0.9"
# TODO: currently not maintained benchmarks
# criterion = "0.3"
digest = "0.8"
sha3 = "0.8"
base64 = "0.11"
kvdb = "0.5"
kvdb-memorydb = "0.5"
test-common = { path = "../test-common" }

# TODO: currently not maintained benchmarks
# [[bench]]
# name = "hashes"
# harness = false

# [[bench]]
# name = "tx"
# harness = false
