[package]
name = "chain-abci"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Pre-alpha version prototype of Crypto.com Chain node (Tendermint ABCI application)"
readme = "README.md"
edition = "2018"

[features]
default = ["edp"]
mock-enclave = []
edp = ["aesm-client", "enclave-runner", "sgxs-loaders", "tokio"]

[dependencies]
abci = "0.7"
chain-core = { path = "../chain-core" }
chain-storage = { path = "../chain-storage" }
chain-tx-filter = { path = "../chain-tx-filter" }
chain-tx-validation = { path = "../chain-tx-validation" }
enclave-protocol = { path = "../enclave-protocol" }
mock-utils = { path = "../chain-tx-enclave/mock-utils" }
mls = { path = "../chain-tx-enclave-next/mls" }
ra-client = { path = "../chain-tx-enclave-next/enclave-ra/ra-client" }


log = "0.4.11"
env_logger = "0.7.1"
bit-vec = { version = "0.6.2", features = ["serde_no_std"] }
byteorder = "1.3.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
hex = "0.4"
protobuf = "2.7.0"
integer-encoding = "1.1.5"
structopt = "0.3"
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "535790e91fac1b3b00c770cb339a06feadc5f48d", features = ["recovery", "endomorphism"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
aesm-client = {version = "0.5", features = ["sgxs"], optional = true }
enclave-runner = {version = "0.4", optional = true}
sgxs-loaders = {version = "0.2", optional = true}
tokio = { version = "0.2", optional = true }

zmq = "0.9"
rand = "0.7"

[build-dependencies]
cc = "1.0"
vergen = "3.1.0"

[dev-dependencies]
quickcheck = "0.9"
# TODO: currently not maintained benchmarks
# criterion = "0.3"
digest = "0.9"
sha3 = "0.9"
base64 = "0.12"
kvdb = "0.7"
kvdb-memorydb = "0.7"
test-common = { path = "../test-common" }
rand = "0.7"

# TODO: currently not maintained benchmarks
# [[bench]]
# name = "hashes"
# harness = false

# [[bench]]
# name = "tx"
# harness = false
