[package]
name = "chain-abci"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Thaler Experimental Network node (Tendermint ABCI application)"
readme = "README.md"
edition = "2018"

[features]
default = ["edp"]
mock-enclave = []
edp = ["aesm-client", "enclave-runner", "sgxs-loaders", "tokio"]

[dependencies]
abci = { version = "0.7", git = "https://github.com/crypto-com/rust-abci.git", rev = "d7e007cea9179d560f9d51075525a9cc9449a808" }
chain-core = { path = "../chain-core" }
chain-storage = { path = "../chain-storage" }
chain-tx-filter = { path = "../chain-tx-filter" }
chain-tx-validation = { path = "../chain-tx-validation" }
enclave-protocol = { path = "../enclave-protocol", features = ["edp"] }
mock-utils = { path = "../chain-tx-enclave/mock-utils" }
mls = { path = "../chain-tx-enclave-next/mls" }
ra-client = { path = "../chain-tx-enclave-next/enclave-ra/ra-client" }
ra-sp-server = { path = "../chain-tx-enclave-next/enclave-ra/ra-sp-server" }
blake3 = { version = "0.3.7", default-features = false }

log = "0.4.13"
env_logger = "0.8.2"
bit-vec = { version = "0.6.3", features = ["serde_no_std"] }
byteorder = "1.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
hex = "0.4"
protobuf = "2.16.2"
integer-encoding = "3.0.1"
structopt = "0.3"
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "1aae6edc5f1de0bbdcdb26f1f1d8b00ca28e012a", features = ["recovery", "endomorphism", "global-context"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
thiserror = "1.0"
kvdb = "0.7"
itertools = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
aesm-client = {version = "0.5", features = ["sgxs"], optional = true }
enclave-runner = {version = "0.4", optional = true}
sgxs-loaders = {version = "0.3", optional = true}
tokio = { version = "= 0.2.22", features = ["uds"], optional = true }
rand = "0.7"
tdbe-common = { path = "../chain-tx-enclave-next/tdbe/tdbe-common" }

[build-dependencies]
cc = "1.0"
vergen = "3.1.0"

[dev-dependencies]
quickcheck = "1.0"
# TODO: currently not maintained benchmarks
# criterion = "0.3"
digest = "0.9"
sha3 = "0.9"
base64 = "0.13"
kvdb = "0.7"
kvdb-memorydb = "0.7"
test-common = { path = "../test-common" }
rand = "0.7"

# TODO: currently not maintained benchmarks
# [[bench]]
# name = "hashes"
# harness = false

# [[bench]]
# name = "tx"
# harness = false
