[package]
name = "chain-core"
version = "0.4.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Library with core types and serialization for the use in external tools"
readme = "../README.md"
edition = "2018"

[features]
default = ["serde", "bech32", "hex", "base64", "secp256k1zkp/serde", "secp256k1zkp/std"]
mesalock_sgx = ["sgx_tstd", "secp256k1zkp/sgx"]


[dependencies]
digest = { version = "0.8", default-features = false}
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = { version = "0.8", default-features = false }
hex = { version = "0.4", optional = true }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "0125097a7bf6f939db0ce52e49803c5e0312bf5e", features = ["recovery", "endomorphism"] }
serde = { version = "1.0", features = ["derive"], optional = true }
blake2 = { version = "0.8", default-features = false }
parity-scale-codec = { features = ["derive"], default-features = false, version = "1.1" }
base64 = { version = "0.11", optional = true }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
static_assertions = { version = "1.1.0", default-features = false}
bech32 = { version = "0.7.2", optional = true }
aead = "0.2"
fixed = "0.5.4"
thiserror = { version = "1.0", default-features = false }

[dev-dependencies]
quickcheck = "0.9"
serde_json = "1.0"
