[package]
name = "chain-storage"
version = "0.5.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Storage of Crypto.com Chain node (Merkle trie, transaction metadata etc.)"
readme = "README.md"
edition = "2018"

[dependencies]
blake3 = "0.3.4"
kvdb = "0.7"
kvdb-rocksdb = "0.9"
kvdb-memorydb = "0.7"
chain-core = { path = "../chain-core" }
bit-vec = { version = "0.6.2", features = ["serde_no_std"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
integer-encoding = "1.1.5"
anyhow = "1.0"
jellyfish-merkle = { git = "https://github.com/crypto-com/jellyfish-merkle-tree.git", rev = "42c0fb190b4034c7939f8876d3f539bd2ff74cd9" }

[dev-dependencies]
quickcheck = "0.9"
criterion = "0.3"

[[bench]]
name = "jellyfish"
harness = false
