[package]
name = "chain-tx-filter"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Library that captures the fuctionality related to block-level public view key-based transaction filtering."
readme = "../README.md"
edition = "2018"

[features]
default = ["bit-vec/std", "chain-core/default"]

[dependencies]
chain-core = { default-features = false, path = "../chain-core" }
parity-scale-codec = { version = "1.3" }
secp256k1 = { default-features = false, git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "984ccbccb48d62f5cb46f6fc1c75a04f34102987", features = ["endomorphism"] }
bit-vec = { default-features = false, version = "0.6" }

[dev-dependencies]
quickcheck = "0.9"
hex = "0.4"
ethbloom = "0.9.2"
