[package]
name = "chain-tx-validation"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Library with functions that verify, given current chain state's data, if a transaction is valid."
readme = "../README.md"
edition = "2018"

[features]
default = ["chain-core/default", "thiserror"]

[dependencies]
chain-core = { path = "../chain-core", default-features = false }
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "1aae6edc5f1de0bbdcdb26f1f1d8b00ca28e012a", features = ["recovery", "endomorphism", "schnorrsig", "global-context"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
thiserror = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8"