[package]
name = "client-cli"
version = "0.4.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"
build = "build.rs"

[features]
mock-enc-dec = []
default = []

[dependencies]
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
client-network = { path = "../client-network" }
console = "0.9"
rand = "0.7"
once_cell = "1.3"
structopt = "0.3"
quest = "0.3"
secstr = { version = "0.4.0", features = ["serde"] }
hex = "0.4"
unicase = "2.6"
chrono = "0.4"
pbr = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
cli-table = "0.2"
zeroize = "1.1"
base64 = "0.11"
serde_json = "1.0"
tiny-bip39 = { version = "0.7", default-features = false }

[build-dependencies]
vergen = "=3.0.4"
