[package]
name = "client-common"
version = "0.5.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
chain-tx-filter = { path = "../chain-tx-filter" }

aes = "0.3"
aes-gcm-siv = "0.4"
anyhow = "1.0"
base64 = "0.11"
blake3 = "0.3.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", optional = true }
gcd = "2.0"
hex = "0.4"
indexmap = "1.3"
itertools = "0.9"
log = "0.4.8"
parity-scale-codec = { features = ["derive"], version = "1.3" }
rand = "0.7"
rust-argon2 = "0.8"
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "f8759809f6e3fed793b37166f7cd91c57cdb2eab", features = ["serde", "zeroize", "rand", "recovery", "endomorphism", "musig"] }
secstr = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = { version = "0.31.0", optional = true }
tendermint = { git = "https://github.com/crypto-com/tendermint-rs.git", default-features = false, rev = "e8d350960726b242fdaa67d293d71ba8cfdb8024" }
tokio = { version = "0.2", features = ["rt-threaded", "sync", "time", "tcp"], optional = true }
tokio-tungstenite = { version = "0.10", features = ["tls"], optional = true }
zeroize = "1.1"

[dev-dependencies]
quickcheck = "0.9"

[features]
default = ["sled", "websocket-rpc"]
websocket-rpc = ["futures-util", "tokio", "tokio-tungstenite"]
