[package]
name = "client-common"
version = "0.6.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
chain-tx-filter = { path = "../chain-tx-filter" }
enclave-protocol = { path = "../enclave-protocol" }
mock-utils = { path = "../chain-tx-enclave/mock-utils" }
ra-client = { path = "../chain-tx-enclave-next/enclave-ra/ra-client" }

aes = "0.4"
aes-gcm-siv = "0.5"
anyhow = "1.0"
base64 = "0.12"
bit-vec = "0.6.2"
blake3 = "0.3.5"
cfg-if = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", optional = true }
gcd = "2.0"
hex = "0.4"
indexmap = "1.5"
itertools = "0.9"
num-bigint = "0.2.5"
log = "0.4.11"
once_cell = "1.4"
parity-scale-codec = { features = ["derive"], version = "1.3" }
rand = "0.7"
rust-argon2 = "0.8"
rustls =  { version = "0.18", features = ["dangerous_configuration"] }
# secp256k1experimental = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "cccfdb77c068b9cefa07b6884849f8473683d6d4", features = ["serde", "zeroize", "rand", "recovery", "endomorphism", "musig"] }
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "535790e91fac1b3b00c770cb339a06feadc5f48d", features = ["serde", "zeroize", "rand", "recovery", "endomorphism", "schnorrsig"] }
secstr = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = { version = "0.33.0", optional = true }
tendermint = "0.15"
tendermint-rpc = "0.15"
tokio = { version = "0.2", features = ["rt-threaded", "sync", "time", "tcp"], optional = true }
tokio-tungstenite = { version = "0.10", features = ["tls"], optional = true }
uuid = { version = "0.8.1", features = ["v4"] }
webpki = "0.21"
zeroize = "1.1"

[dev-dependencies]
quickcheck = "0.9"

[features]
default = ["sled", "websocket-rpc"]
websocket-rpc = ["futures-util", "tokio", "tokio-tungstenite"]
mock-enclave = []
experimental = []
