[package]
name = "client-common"
version = "0.6.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
chain-tx-filter = { path = "../chain-tx-filter" }
enclave-protocol = { path = "../enclave-protocol" }
mock-utils = { path = "../chain-tx-enclave/mock-utils" }
enclave-macro = { path = "../chain-tx-enclave/enclave-macro" }
ra-client = { path = "../chain-tx-enclave-next/enclave-ra/ra-client" }
mls = { path = "../chain-tx-enclave-next/mls" }

aes = "0.4"
aes-gcm-siv = "0.9"
anyhow = "1.0"
base64 = "0.13"
bit-vec = "0.6.3"
blake3 = "0.3.7"
cfg-if = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", optional = true }
gcd = "2.0"
hex = "0.4"
indexmap = "1.6"
itertools = "0.10"
num-bigint = "0.2.5"
log = "0.4.13"
once_cell = "1.5"
parity-scale-codec = { features = ["derive"], version = "2.0" }
rand = "0.7"
rust-argon2 = "0.8"
rustls =  { version = "0.19", features = ["dangerous_configuration"] }
# secp256k1experimental = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "cccfdb77c068b9cefa07b6884849f8473683d6d4", features = ["serde", "zeroize", "rand", "recovery", "endomorphism", "musig"] }
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "1aae6edc5f1de0bbdcdb26f1f1d8b00ca28e012a", features = ["serde", "zeroize", "rand", "recovery", "endomorphism", "schnorrsig", "global-context"] }
secstr = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = { version = "0.33.0", optional = true }
tendermint = "0.15"
tendermint-rpc = "0.15"
tokio = { version = "= 0.2.22", features = ["rt-threaded", "sync", "time", "tcp"], optional = true }
tokio-tungstenite = { version = "0.10", features = ["tls"], optional = true }
uuid = { version = "0.8.2", features = ["v4"] }
webpki = "0.21"
zeroize = "1.2"

[dev-dependencies]
quickcheck = "0.9"

[features]
default = ["sled", "websocket-rpc"]
websocket-rpc = ["futures-util", "tokio", "tokio-tungstenite"]
mock-enclave = []
experimental = []
