[package]
name = "client-core"
version = "0.6.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
description = "This crate exposes following functionalities for interacting with Crypto.com Chain."
edition = "2018"

[dependencies]
blake3 = { version = "0.3.4", default-features = false }
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common" }
chain-tx-filter = { path = "../chain-tx-filter" }
chain-tx-validation = { path = "../chain-tx-validation" }
chain-storage = { path = "../chain-storage", default-features = false }
once_cell = "1.4"
mock-utils = { path = "../chain-tx-enclave/mock-utils" }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "f8759809f6e3fed793b37166f7cd91c57cdb2eab", features = ["serde", "zeroize", "rand", "recovery", "endomorphism", "musig"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"
hex = "0.4"
zeroize = "1.1"
byteorder = "1.3"
secstr = { version = "0.4.0", features = ["serde"] }
itertools = "0.9"
base64 = "0.12"
bit-vec = "0.6.2"
serde_json = "1.0.56"
jsonrpc-core = "14.2"
log ="0.4.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.1.22", default-features = false, features = ["rt-full"] }
tiny-bip39 = { version = "0.7", default-features = false }
unicase = "2.6.0"
lazy_static = "1.4.0"
ring = "0.16.12"
tendermint = { git = "https://github.com/crypto-com/tendermint-rs.git", default-features = false, rev = "e8d350960726b242fdaa67d293d71ba8cfdb8024" }
thiserror = { version = "1.0", default-features = false }
non-empty-vec = "0.1"
zxcvbn = "2.0"
indexmap = "1.4"

[dev-dependencies]
base58 = "0.1.0"
hex = "0.4.2"
ripemd160 = "0.8.0"
test-common = { path = "../test-common" }

[features]
default = ["sled"]
sled = ["client-common/sled"]
websocket-rpc = ["client-common/websocket-rpc"]
mock-hardware-wallet = []
