[package]
name = "client-core"
version = "0.6.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
description = "This crate exposes following functionalities for interacting with Crypto.com Chain."
edition = "2018"

[dependencies]
blake3 = { version = "0.3.6", default-features = false }
chain-util = { path = "../chain-util" }
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common", features = ["sled"] }
chain-tx-filter = { path = "../chain-tx-filter" }
chain-tx-validation = { path = "../chain-tx-validation" }
chain-storage = { path = "../chain-storage", default-features = false }
once_cell = "1.4"
mock-utils = { path = "../chain-tx-enclave/mock-utils" }
ledger-crypto = { git = "https://github.com/Zondax/ledger-crypto-rs", rev = "62ccadf0374c45e318e622cc01fb44647592659f" }
# secp256k1experimental = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "cccfdb77c068b9cefa07b6884849f8473683d6d4", features = ["serde", "zeroize", "rand", "recovery", "endomorphism", "musig"] }
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "1aae6edc5f1de0bbdcdb26f1f1d8b00ca28e012a", features = ["serde", "rand", "recovery", "endomorphism", "schnorrsig", "global-context"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"
hex = "0.4"
zeroize = "1.1"
byteorder = "1.3"
secstr = { version = "0.4.0", features = ["serde"] }
itertools = "0.9"
base64 = "0.12"
bit-vec = "0.6.2"
serde_json = "1.0.57"
jsonrpc-core = "14.2"
log ="0.4.11"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.2"
tiny-bip39 = { version = "0.7", default-features = false }
unicase = "2.6.0"
ring = "0.16.15"
tendermint = "0.15"
tendermint-light-client = "0.15"
thiserror = { version = "1.0", default-features = false }
zxcvbn = "2.0"
indexmap = "1.6"
sled = "0.33.0"
zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs", branch="master" }


[dev-dependencies]
base58 = "0.1.0"
hex = "0.4.2"
ripemd160 = "0.9"
test-common = { path = "../test-common" }

[features]
websocket-rpc = ["client-common/websocket-rpc"]
mock-hardware-wallet = []
experimental = ["client-common/experimental"]
mock-enclave = ["client-common/mock-enclave"]
