[package]
name = "client-index"
version = "0.1.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common" }
chain-tx-filter = { path = "../chain-tx-filter" }
enclave-protocol = { path = "../enclave-protocol" }
failure = "0.1"
parity-codec = { features = ["derive"], version = "4.1.4" }
chrono = { version = "0.4", features = ["serde"] }
jsonrpc = { version = "0.11", optional = true }
base64 = "0.10"

[dev-dependencies]
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "ab780345c85ac2c28a4e0c08e8e18c4ecdbb1fa9", features = ["serde", "zeroize", "rand", "recovery", "endomorphism"] }

[features]
default = ["sled", "rpc"]
sled = ["client-common/sled"]
rpc = ["jsonrpc"]
