[package]
name = "client-index"
version = "0.1.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common" }
chain-tx-filter = { path = "../chain-tx-filter" }
enclave-protocol = { path = "../enclave-protocol" }
failure = "0.1"
parity-scale-codec = { features = ["derive"], version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
jsonrpc = { version = "0.11", optional = true }
base64 = "0.10"
webpki = "0.21"
rustls =  {version = "0.16", features = ["dangerous_configuration"]}
yasna = { version = "0.3.0", features = ["bit-vec", "num-bigint", "chrono"] }
bit-vec = "0.6.1"
num-bigint = "0.2.2"
serde_json = "1.0.39"
uuid = { version = "0.7.4", features = ["v4"] }

[dev-dependencies]
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "29991f23eaaa55ec86491dc78e7455f8f1fe3212", features = ["serde", "zeroize", "rand", "recovery", "endomorphism"] }

[features]
default = ["sled", "rpc"]
sled = ["client-common/sled"]
rpc = ["jsonrpc"]
